TestRepo2/src/objects/Preparation_Step__c.object
<CustomObject>
    <fields>
        <fullName>ActionGroup__c</fullName>
        <label>ActionGroup</label>
        <picklist>
            <picklistValues>
                <fullName>Mix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stir</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preparation_Step_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Preparation Step External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipe__c</fullName>
        <label>Recipe</label>
        <referenceTo>Recipe__c</referenceTo>
        <relationshipLabel>Preparation Steps</relationshipLabel>
        <relationshipName>Preparation_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Step_Number__c</fullName>
        <label>Step Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Preparation Step</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Description__c</columns>
        <columns>Recipe__c</columns>
        <columns>Preparation_Step_External_Id__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Step_Type_Editor</fullName>
        <columns>Recipe__c</columns>
        <columns>Step_Number__c</columns>
        <columns>ActionGroup__c</columns>
        <columns>Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>Step Type Editor</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Prepstep-{000000000}</displayFormat>
        <label>Step</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preparation Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>